--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,69 +6,32 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:id="@+id/myRelativeLayout"
     android:foregroundGravity="fill_vertical"
-    android:background="@drawable/abstract_minimalistic_digital_art_backgrounds_gradient_simple_blurred_1280x800_66399">
+    android:background="@drawable/walppaper_black">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:text="Easy Convertor"
+        android:text="Select Your Images To Start"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:background="@null"
-        android:textColor="#352a72"
+        android:textColor="#787681"
         android:gravity="center_vertical|center_horizontal"
         android:textStyle="bold"
-        android:textSize="30dp"
-        android:typeface="serif" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cameraButton"
-        android:src="@drawable/poster"
-        android:background="@null"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/galleryButton"
-        android:layout_alignStart="@+id/galleryButton"
-        android:layout_marginTop="61dp"
-        android:clickable="true"
-        android:onClick="btnCamHandler"/>
+        android:textSize="25dp"
+        android:typeface="serif"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="67dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/galleryButton"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/gall"
+        android:src="@drawable/camera"
         android:background="@null"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:clickable="true"
         android:onClick="btnGallHandler"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Camera"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/cameraButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:textStyle="bold"
-        android:textSize="17dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Gallery"
-        android:id="@+id/textView3"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"
-        android:textSize="17dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
