--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,14 +31,35 @@
         android:background="@null"
         android:clickable="true"
         android:onClick="btnGallHandler"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="48dp"
+        android:layout_marginStart="48dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/convertButton"
+        android:text="Convert Images"
+        android:background="@null"
+        android:clickable="true"
+        android:onClick="onConvertPdfClick"
+
+
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/my_recycler_view"
+        android:layout_alignEnd="@+id/my_recycler_view"
+        android:layout_marginRight="39dp"
+        android:layout_marginEnd="39dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/galleryButton" />
+        android:layout_above="@+id/galleryButton"
+        android:layout_below="@+id/textView" />
+
 
 </RelativeLayout>
