--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/myRelativeLayout"
-    android:foregroundGravity="fill_vertical"
-    android:background="@drawable/walppaper_black">
+
+<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profileSwitcher"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context=".MainActivity">
+
+
+    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+        android:id="@+id/myRelativeLayout"
+        android:foregroundGravity="fill_vertical"
+        android:background="@drawable/walppaper_black">
 
     <TextView
         android:layout_width="fill_parent"
@@ -31,35 +40,58 @@
         android:background="@null"
         android:clickable="true"
         android:onClick="btnGallHandler"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="48dp"
-        android:layout_marginStart="48dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/convertButton"
-        android:text="Convert Images"
-        android:background="@null"
-        android:clickable="true"
-        android:onClick="onConvertPdfClick"
-
-
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/my_recycler_view"
-        android:layout_alignEnd="@+id/my_recycler_view"
-        android:layout_marginRight="39dp"
-        android:layout_marginEnd="39dp" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/galleryButton"
-        android:layout_below="@+id/textView" />
 
 
 </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:id="@+id/myRelativeLayout1">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/galleryButton1"
+            android:src="@drawable/camera_48"
+            android:background="@null"
+            android:clickable="true"
+            android:onClick="btnGallHandler"
+            android:layout_marginLeft="94dp"
+            android:layout_marginStart="94dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/convertButton"
+            android:background="@null"
+            android:clickable="true"
+            android:onClick="onConvertPdfClick"
+
+
+            android:src="@drawable/icon2561"
+            android:layout_below="@+id/my_recycler_view"
+            android:layout_toRightOf="@+id/galleryButton1"
+            android:layout_toEndOf="@+id/galleryButton1"
+            android:layout_marginLeft="98dp"
+            android:layout_marginStart="98dp" />
+
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/galleryButton1" />
+
+    </RelativeLayout>
+
+
+</ViewSwitcher>
